// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IntegrationListLimitAlert/> should not render 1`] = `null`;

exports[`<IntegrationListLimitAlert/> should render a warning message 1`] = `
<div
  class="alert warning d-inline-flex"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      <span
        class="d-flex align-items-center"
      >
        You have reached 
        1
        /
        2
         
        integrations. To add more, you must
        <a
          class="ml-1 mr-1"
          to="/app/settings/billing/plans"
        >
          upgrade
        </a>
        to a higher plan.
      </span>
    </span>
  </div>
</div>
`;

exports[`<IntegrationListLimitAlert/> should render an error message 1`] = `
<div
  class="alert error d-inline-flex"
>
  <div
    class="iconContainer"
  >
    <img
      alt="icon"
      src="test-file-stub"
    />
  </div>
  <div
    class="content"
  >
    <span
      class="label"
    >
      <span
        class="d-flex align-items-center"
      >
        You have reached 
        2
        /
        2
         
        integrations. To add more, you must
        <a
          class="ml-1 mr-1"
          to="/app/settings/billing/plans"
        >
          upgrade
        </a>
        to a higher plan.
      </span>
    </span>
  </div>
</div>
`;
